<resources>
    <string name="app_name">Schedule</string>
    <string name="add">Add</string>
    <string name="text_url">URL</string>
    <string name="item_name">Event</string>
    <string name="item_location">Location</string>
    <string name="item_duration">Time</string>
    <string name="item_hour">Hour</string>
    <string name="item_date">Date</string>
    <string name="title_activity_schedules_list">List of your schedules</string>
    <string name="title_activity_main">Schedule</string>

    <!-- Titles -->
    <string name="fragment_title_schedule_list">Calendars</string>

    <!-- Calendar list -->
    <string name="dialog_add_schedule_title">New calendar</string>
    <string name="dialog_add_schedule_desc">Enter an URL :</string>
    <string name="dialog_add_schedule_label_name">Name : </string>
    <string name="dialog_add_schedule_label_group">Group : </string>
    <string name="label_schedule_course_number">Event : </string>
    <string name="label_schedule_last_update">Last update : </string>

    <!-- Dialog OptionsSchedule -->
    <string name="dialog_options_schedule_title">Choose one :</string>
    <string-array name="dialog_options_schedule_menu">
        <item>Update</item>
        <item>Rename</item>
        <item>Enable/Disable</item>
        <item>Delete</item>
    </string-array>

    <!-- Dialog ItemOption -->
    <string-array name="dialog_item_option_penu">
        <item>Delete</item>
        <item>Insert</item>Z
    </string-array>

    <!-- Detail -->
    <string name="label_desc">Description :</string>
    <string name="label_start_time">Start at :</string>
    <string name="label_date">Date :</string>
    <string name="label_end_time">End at :</string>
    <string name="label_room">Location : </string>
    <string name="back">Back</string>

    <!-- Titres -->
    <string name="title_navigation_week">Weeks Calendar</string>
    <string name="title_navigation_home">Home</string>
    <string name="title_navigation_days">Courses</string>
    <string name="title_navigation_schedule">Calendars</string>
    <string name="title_navigation_settings">Settings</string>
    <string name="title_schedule_manager">Schedule Settings</string>

    <string name="title_course_details">Course details</string>
    <string name="title_days">Course list</string>
    <string name="title_home">Schedule</string>
    <string name="title_schedule">Calendars</string>
    <string name="title_settings">General settings</string>
    <string name="schedule_group_default">General</string>

    <!--Filter-->
    <string name="title_create_tab">Create filter</string>
    <string name="title_manage_tab">Manage filter</string>
    <string name="create_button">Save</string>

    <!-- Buttons -->
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>


</resources>
